[gd_scene load_steps=8 format=3 uid="uid://b6ncr7uokovne"]

[ext_resource type="Texture2D" uid="uid://beix3pdhjg763" path="res://background.jpg" id="1_1myu6"]
[ext_resource type="Script" path="res://scene7.gd" id="1_ptsrf"]
[ext_resource type="FontFile" uid="uid://dvwbsssrsjdn7" path="res://MightySouly-lxggD.ttf" id="2_e0agr"]
[ext_resource type="Texture2D" uid="uid://rjldo1xnmpn5" path="res://animals/animals/elephant.png" id="4_blusa"]
[ext_resource type="VideoStream" path="res://WhatsApp-Video-2024-04-16-at-9.55.21-PM.ogv" id="4_mbbav"]
[ext_resource type="Texture2D" uid="uid://dhaxx0e06hqw" path="res://animals/animals/rhino.png" id="6_haty3"]
[ext_resource type="Texture2D" uid="uid://b7c2qjv4hfviy" path="res://animals/animals/zebra.png" id="7_gx0kb"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ptsrf")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 2.0
offset_top = 5.0
offset_right = 1152.0
offset_bottom = 664.0
texture = ExtResource("1_1myu6")

[node name="Label" type="Label" parent="."]
offset_left = 308.0
offset_top = 18.0
offset_right = 831.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_e0agr")
theme_override_font_sizes/font_size = 60
text = "SHAPE MATCHING GAME"

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 453.0
offset_top = 132.0
offset_right = 667.0
offset_bottom = 313.0
texture = ExtResource("4_blusa")
expand_mode = 1

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
visibility_layer = 8
offset_left = 380.0
offset_top = 231.0
offset_right = 727.0
offset_bottom = 519.0
stream = ExtResource("4_mbbav")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 745.0
offset_top = 374.0
offset_right = 949.0
offset_bottom = 591.0
texture_normal = ExtResource("6_haty3")
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 102.0
offset_top = 360.0
offset_right = 344.0
offset_bottom = 598.0
texture_normal = ExtResource("7_gx0kb")
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 448.0
offset_top = 363.0
offset_right = 677.0
offset_bottom = 601.0
texture_normal = ExtResource("4_blusa")
stretch_mode = 0

[node name="NextButton" type="Button" parent="."]
offset_left = 962.0
offset_top = 583.0
offset_right = 1137.0
offset_bottom = 653.0
theme_override_fonts/font = ExtResource("2_e0agr")
theme_override_font_sizes/font_size = 30
text = "NEXT"

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
